# marconi-transport-amqp

./: README.md  cookiecutter.json
transport-amqp10/: requirements.txt  setup.cfg
transport-amqp10/amqp/: __init__.py  driver.py  eventloop.py  messages.py  utils.py
transport-amqp10/amqp/examples/: recv.py  send.py
{{cookiecutter.repo_name}}/: requirements.txt  setup.cfg
{{cookiecutter.repo_name}}/tests/unit/queues/transport/{{cookiecutter.module_name}}/: base.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/: driver.py
