[metadata]
name = transport_amqp10
version = 0.1
summary = AMQP transport driver for Zaqar
description-file =
    README.rst
author = Victoria Martinez de la Cruz
author-email = victoria@vmartinezdelacruz.com
home-page = vmartinezdelacruz.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    amqp

[entry_points]
zaqar.queues.transport =
    amqp = amqp.driver:Driver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = amqp/locale
domain = transport_amqp10

[update_catalog]
domain = transport_amqp10
output_dir = amqp/locale
input_file = amqp/locale/amqp.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = amqp/locale/transport_amqp10.pot
